# squint

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENCE  README.md  client.lua  xbr-lv1.frag  xbr-lv2.frag
client/: main.lua  package.json
shaders/: xbr-lv1.frag  xbr-lv2.frag
src/: AsepriteConnection.cpp  AsepriteConnection.h  Upscaler.cpp  Upscaler.h  main.cpp  platformSetup.cpp  platformSetup.h
